Tue Mar  9 20:22:24 2010  Keiju Ishitsuka  <keiju@giant>

	* port.rb: [REQ#218]対応. 不必要なリファレンス渡しを削除

Tue Mar  9 18:00:41 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* processor.rb, port.rb: [REQ#218]対応


Tue Mar  9 17:07:36 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: [REQ#217]対応完了.

Mon Mar  8 15:10:08 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb, conf.rb: [REQ#217]対応
	* port.rb: ログ出力追加

Wed Mar  3 17:34:11 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: ExtMergeSortBufferで不要にリファレンスが渡る
	  のをなくした.
	* port.rb: Import#asynchronus_send_with_callbackを追加し
	  asynchronus_send_with_callbackを疑似対応した.

Fri Feb 26 15:01:45 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: ExtMergeSortBufferで終了時に添付ファイルを明
	  示的に消去するようにした
	* fast-tempfile.rb: FastTempFile#close! ですでにクローズされている
	  とき, 例外が発生していた.

Thu Feb 25 20:41:05 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* processor.rb, n-mod-group-by.rb: ExtMergeSortBuffer追加

Tue Feb 23 15:25:57 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: [BUG#212]対応. マージソート用添付ファイルを使
	  用後削除するようにした.
	
Fri Feb 19 19:26:21 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port.rb: [REQ#210]対応 その3 すべてのqueueに対応

Fri Feb 19 16:10:40 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port.rb: [REQ#210]対応 その2 ChunkedPoolQueue だけ対応
	* fiber-mon.rb: FiberMon::Monitor 追加


Thu Feb 18 22:28:09 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* processor.rb: Processor#update_statusにバグがあった

Thu Feb 18 21:09:13 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ntask.rb, njob.rb, n-single-exportable.rbn-group-by.rb, port.rb:
	  [REQ#210]対応 その1
	* fiber-mon.rb: monitor.rb を利用するようにした.
	
Wed Feb 17 00:31:27 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* processor.rb: [BUG#208] Processor#start_watch_status でスレッド
	  が暴走していた

Tue Feb 16 23:27:55 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* processor.rb, ntask.rb, njob.rb: [REQ#208] 対応