@@ -88,7 +88,7 @@ CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 ##CONF.LOCAL_OUTPUT_POOL_THRESHOLD = 32000
 
 ##CONF.N_MOD_GROUP_BY = 5
-#CONF.N_MOD_GROUP_BY = 10
+CONF.N_MOD_GROUP_BY = 10
 #CONF.N_MOD_GROUP_BY = 15
 #CONF.N_MOD_GROUP_BY = 40
 
@@ -104,9 +104,9 @@ CONF.HASH_OPTIMIZE = true
 CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 
 ##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
-CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100000
+#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100000
 #CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 200000
-#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 400000
+CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 400000
 #CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
 
 ##CONF.MOD_GROUP_BY_CMSB_CHUNK_SIZE = 10000
@@ -166,7 +166,7 @@ CONF.PROCESSOR_MON_INTERVAL = 300
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
+#CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_MONITOR_ON = false
 #CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
