@@ -1,3 +1,7 @@
+Fri Mar 12 13:53:45 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port.rb: import_mqで登録されるまで待つようにした.
+
 Tue Mar  9 20:22:24 2010  Keiju Ishitsuka  <keiju@giant>
 
 	* port.rb: [REQ#218]対応. 不必要なリファレンス渡しを削除
